created base apex class for testing

--- a/force-app/main/default/lwc/vacation/vacation.html
+++ b/force-app/main/default/lwc/vacation/vacation.html
@@ -6,7 +6,7 @@
 		<div class="slds-form-element">
 			<div class="slds-form-element__control">
 				<div class="slds-checkbox">
-					<input type="checkbox" name="options" id="checkbox-unique-id-73" value="checkbox-unique-id-73" checked="" />
+					<input type="checkbox" name="options" id="checkbox-unique-id-73" value="checkbox-unique-id-73" />
 					<label class="slds-checkbox__label" for="checkbox-unique-id-73">
         <span class="slds-checkbox_faux"></span>
         <span class="slds-form-element__label">{personalRequests}</span>
