--- a/force-app/main/default/lwc/vacation/vacation.html
+++ b/force-app/main/default/lwc/vacation/vacation.html
@@ -8,14 +8,44 @@
 				<div class="slds-checkbox">
 					<input type="checkbox" name="options" id="checkbox-unique-id-73" value="checkbox-unique-id-73" />
 					<label class="slds-checkbox__label" for="checkbox-unique-id-73">
-        <span class="slds-checkbox_faux"></span>
-        <span class="slds-form-element__label">{personalRequests}</span>
-      </label>
+						<span class="slds-checkbox_faux"></span>
+						<span class="slds-form-element__label">{personalRequests}</span>
+					</label>
 					<button class="slds-button slds-button_brand"
-					onclick={toggleRequestForm}>{submitButtonText}</button>
+						onclick={toggleRequestForm}>{submitButtonText}</button>
 				</div>
 			</div>
 		</div>
+
+		<!--Modal window for a new request-->
+		<template if:true={requestWindowIsVisible}>
+			<section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true"
+				aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
+				<div class="slds-modal__container">
+					<header class="slds-modal__header">
+						<button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
+							title="Close">
+							<svg class="slds-button__icon slds-button__icon_large" aria-hidden="true">
+								<use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"></use>
+							</svg>
+							<span class="slds-assistive-text">Close</span>
+						</button>
+						<h2 id="modal-heading-01" class="slds-modal__title slds-hyphenate">{submitButtonText}</h2>
+						<!--Record edit form-->
+
+						<p class="slds-m-top_x-small">Test </p>
+					</header>
+					<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
+						<p>Test.</p>
+					</div>
+					<footer class="slds-modal__footer">
+						<button class="slds-button slds-button_neutral" onclick={toggleRequestForm}>Cancel</button>
+						<button class="slds-button slds-button_brand">Save</button>
+					</footer>
+				</div>
+			</section>
+			<div class="slds-backdrop slds-backdrop_open"></div>
+		</template>
 
 	</div>
 </template>
