--- a/force-app/main/default/lwc/vacation/vacation.html
+++ b/force-app/main/default/lwc/vacation/vacation.html
@@ -20,12 +20,12 @@
 				<lightning-record-edit-form object-api-name="Vacation_Request__c">
 					<lightning-messages>
 					</lightning-messages>
-					<lightning-output-field field-name="RequestType__c">
-					</lightning-output-field>
-					<lightning-output-field field-name="StartDate__c">
-					</lightning-output-field>
-					<lightning-output-field field-name="EndDate__c">
-					</lightning-output-field>
+					<lightning-input-field field-name="RequestType__c">
+					</lightning-input-field>
+					<lightning-input-field field-name="StartDate__c">
+					</lightning-input-field>
+					<lightning-input-field field-name="EndDate__c">
+					</lightning-input-field>
 				</lightning-record-edit-form>
 			</template>
 		</div>
