--- a/force-app/main/default/lwc/vacation/vacation.html
+++ b/force-app/main/default/lwc/vacation/vacation.html
@@ -17,7 +17,7 @@
 			</div>
 
 			<template if:false={requestWindowIsVisible}>
-				<lightning-record-edit-form object-api-name="Vacation_Request__c">
+				<lightning-record-edit-form object-api-name="Vacation_Request__c" onsuccess={handleSuccess}>
 					<lightning-messages>
 					</lightning-messages>
 					<lightning-input-field field-name="RequestType__c">
@@ -26,6 +26,9 @@
 					</lightning-input-field>
 					<lightning-input-field field-name="EndDate__c">
 					</lightning-input-field>
+
+					<lightning-button class="slds-m-top_small" type="submit" label="Create new">
+					</lightning-button>
 				</lightning-record-edit-form>
 			</template>
 		</div>
